<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/news_ll_headings"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="8dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/news_tv_heading_one"
        style="@style/style_news_tv_heading"
        android:text="@string/news_tv_heading_one" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/news_tv_heading_two"
        style="@style/style_news_tv_heading"
        android:text="@string/news_tv_heading_two" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/news_tv_heading_three"
        style="@style/style_news_tv_heading"
        android:text="@string/news_tv_heading_three" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/news_tv_heading_four"
        style="@style/style_news_tv_heading"
        android:text="@string/news_tv_heading_four" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/news_tv_heading_five"
        style="@style/style_news_tv_heading"
        android:text="@string/news_tv_heading_five" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/news_tv_heading_six"
        style="@style/style_news_tv_heading"
        android:text="@string/news_tv_heading_six" />
</androidx.appcompat.widget.LinearLayoutCompat>